--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block branding %}
-  <h1 id="head">
-    <img src="{% static 'img/logo.png' %}" alt="Django House Real Estate" height="50" width="80" class="brand_img"> Admin Area
+  <h1>
+    Django Houses
   </h1>
 {% endblock %}
 {% block extrastyle %}
